--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -90,6 +90,7 @@
 
 </head>
 <body>
+  <div class="bdoverlay"></div>
 <header class="header-warp">
   <div class="top-bar">
     <div class="container">
@@ -175,6 +176,13 @@
               </div>
             </div>
             <div class="hdr-right">
+              <div class="humberger-cntlr">
+                <div class="humberger-icon">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
               <div class="hdr-menu">
                 <nav class="main-nav">
                   <ul class="clearfix reset-list">
@@ -208,6 +216,44 @@
     </div>
   </div>
 </header>
+
+
+<div class="xs-mbl-menu-cntlr">
+  <div class="xs-mbl-menu-top-wrap">
+    <div class="xs-mbl-menu-top">
+      <div class="xs-mmt-logo">
+        <a href="#"><img src="assets/images/logo.svg" alt=""></a>
+      </div>
+      <div class="xs-mmt-close-icon">
+        <div class="close-icon humberger-icon">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="xs-mbl-menu">
+    <nav class="main-nav">
+      <ul class="clearfix reset-list">
+        <li class="current-menu-item"><a href="#">latest competitions</a></li>
+        <li class="menu-item-has-children">
+          <a href="#">entry lists</a>
+          <ul class="sub-menu" style="">
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+            <li><a href="#">Sub Menu</a></li>
+          </ul>
+        </li>
+        <li><a href="#">live draws</a></li>
+        <li><a href="#">winners</a></li>
+        <li><a href="#">forest projects</a></li>
+        <li><a href="#">how it</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
 
 
 <section class="lucky-winner-banner page-banner-section">
@@ -613,7 +659,7 @@
 
 
 <section class="left-right-desc">
-  <div class="how-to-play-wrap page-banner-section left-right-desc-item">
+  <div class="how-to-play-wrap page-banner-section left-right-desc-item right-desc-item">
     <div class="banner-bg htp-banner-bg">
       <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/htp-banner-lft-img.jpg')"></div>
       <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/htp-banner-rt-img.jpg')"></div>
@@ -640,36 +686,38 @@
       </div>
     </div>
   </div>
-</section>
 
 
-<section class="how-to-play-sec page-banner-section rstsn-projects-sec">
-  <div class="banner-bg rstsn-projects-bg">
-    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="htp-sec-desc-cntlr rstsn-projects-desc-cntlr">
-          <div class="htp-desc-hedding">
-            <h3 class="htp-desc-title"><span>RESTORATION PROJECTS</span></h3>
-            <i><img src="assets/images/blue-arrow.png" alt=""></i>
-          </div>
-          <div class="htp-sec-desc rstsn-projects-desc">
-            <i><img src="assets/images/white-angle-right.png" alt=""></i>
-            <h6 class="htp-desc-sub-title">Proin gravida velit auctor aliquet aenean sollicitudin, lorem quis bibendum auctor.</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis mi nor. 
-            </p>
-            <div class="htp-desc-button">
-              <a class="fl-btn" href="#">READ MORE</a>
+  <div class="how-to-play-wrap page-banner-section rstsn-projects-sec left-right-desc-item">
+    <div class="banner-bg rstsn-projects-bg">
+      <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+      <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="htp-sec-desc-cntlr rstsn-projects-desc-cntlr">
+            <div class="htp-desc-hedding">
+              <h3 class="htp-desc-title">RESTORATION PROJECTS</h3>
+              <i><img src="assets/images/blue-arrow.png" alt=""></i>
+            </div>
+            <div class="htp-sec-desc rstsn-projects-desc">
+              <i><img src="assets/images/white-angle-right.png" alt=""></i>
+              <h6 class="htp-desc-sub-title">Proin gravida velit auctor aliquet aenean sollicitudin, lorem quis bibendum auctor.</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis mi nor. 
+              </p>
+              <div class="htp-desc-button">
+                <a class="fl-btn" href="#">READ MORE</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
 </section>
+
 
 <section class="main-content">
   <div class="container">
