--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -211,6 +211,9 @@
             <div class="lw-slide-item-rgt-cntlr">
               <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
             </div>
+            <div class="lw-slide-item-rgt-cntlr">
+              <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+            </div>
         </div>
       </div>
   </div>
