--- a/themes/wwcomps/live-draws.html
+++ b/themes/wwcomps/live-draws.html
@@ -362,7 +362,7 @@
 </section>
 
 
-<footer class="footer-wrp d-none">
+<footer class="footer-wrp">
   <div class="footer-top">
     <div class="container">
       <div class="row">
