gallery res done

--- a/themes/wwcomps/gallery.html
+++ b/themes/wwcomps/gallery.html
@@ -224,17 +224,17 @@
                     </div>
                     <div class="gallery-grd-item-overlay-img">
                       <div class="gallery-grd-item-overlay-btn">
-                        <a href="#">view gallery</a>
+                        <a class="fl-btn" href="#">view gallery</a>
                       </div>
                     </div>
                   </div>
                   <div class="gallery-grd-item-des mHc">
                     <div class="gallery-grd-item-des-hdr">
-                      <h5 class="gallery-gid-title mHc1">FOREST GALLERY #1</h5>
+                      <h5 class="gallery-gid-title mHc1"><a href="#">FOREST GALLERY #1</a></h5>
                     </div>
                     <div class="gallery-place-date">
                       <div class="gallery-place">
-                        <a href="#"><i class="fas fa-map-marker-alt"></i>Roble-Hualo, Chilie</a>
+                        <span><i class="fas fa-map-marker-alt"></i>Roble-Hualo, Chilie</span>
                       </div>
                       <div class="galley-date">
                         <span><i class="fas fa-calendar-alt"></i> 14.01.2021</span>
@@ -255,17 +255,17 @@
                     </div>
                     <div class="gallery-grd-item-overlay-img">
                       <div class="gallery-grd-item-overlay-btn">
-                        <a href="#">view gallery</a>
+                        <a class="fl-btn" href="#">view gallery</a>
                       </div>
                     </div>
                   </div>
                   <div class="gallery-grd-item-des mHc">
                     <div class="gallery-grd-item-des-hdr">
-                      <h5 class="gallery-gid-title mHc1">FOREST GALLERY #2</h5>
+                      <h5 class="gallery-gid-title mHc1"><a href="#">FOREST GALLERY #2</a></h5>
                     </div>
                     <div class="gallery-place-date">
                       <div class="gallery-place">
-                        <a href="#"><i class="fas fa-map-marker-alt"></i>Hoia, Romania</a>
+                        <span><i class="fas fa-map-marker-alt"></i>Hoia, Romania</span>
                       </div>
                       <div class="galley-date">
                         <span><i class="fas fa-calendar-alt"></i> 04.01.2021</span>
@@ -286,17 +286,17 @@
                     </div>
                     <div class="gallery-grd-item-overlay-img">
                       <div class="gallery-grd-item-overlay-btn">
-                        <a href="#">view gallery</a>
+                        <a class="fl-btn" href="#">view gallery</a>
                       </div>
                     </div>
                   </div>
                   <div class="gallery-grd-item-des mHc">
                     <div class="gallery-grd-item-des-hdr">
-                      <h5 class="gallery-gid-title mHc1">FOREST GALLERY #3</h5>
+                      <h5 class="gallery-gid-title mHc1"><a href="#">FOREST GALLERY #3</a></h5>
                     </div>
                     <div class="gallery-place-date">
                       <div class="gallery-place">
-                        <a href="#"><i class="fas fa-map-marker-alt"></i>Watu Wa Miti, Kenya</a>
+                        <span><i class="fas fa-map-marker-alt"></i>Watu Wa Miti, Kenya</span>
                       </div>
                       <div class="galley-date">
                         <span><i class="fas fa-calendar-alt"></i> 19.12.2020</span>
@@ -317,17 +317,17 @@
                     </div>
                     <div class="gallery-grd-item-overlay-img">
                       <div class="gallery-grd-item-overlay-btn">
-                        <a href="#">view gallery</a>
+                        <a class="fl-btn" href="#">view gallery</a>
                       </div>
                     </div>
                   </div>
                   <div class="gallery-grd-item-des mHc">
                     <div class="gallery-grd-item-des-hdr">
-                      <h5 class="gallery-gid-title mHc1">FOREST GALLERY #4</h5>
+                      <h5 class="gallery-gid-title mHc1"><a href="#">FOREST GALLERY #4</a></h5>
                     </div>
                     <div class="gallery-place-date">
                       <div class="gallery-place">
-                        <a href="#"><i class="fas fa-map-marker-alt"></i> Oxford, England</a>
+                        <span><i class="fas fa-map-marker-alt"></i> Oxford, England</span>
                       </div>
                       <div class="galley-date">
                         <span><i class="fas fa-calendar-alt"></i> 08.12.2020</span>
@@ -348,17 +348,17 @@
                     </div>
                     <div class="gallery-grd-item-overlay-img">
                       <div class="gallery-grd-item-overlay-btn">
-                        <a href="#">view gallery</a>
+                        <a class="fl-btn" href="#">view gallery</a>
                       </div>
                     </div>
                   </div>
                   <div class="gallery-grd-item-des mHc">
                     <div class="gallery-grd-item-des-hdr">
-                      <h5 class="gallery-gid-title mHc1">FOREST GALLERY #5</h5>
+                      <h5 class="gallery-gid-title mHc1"><a href="#">FOREST GALLERY #5</a></h5>
                     </div>
                     <div class="gallery-place-date">
                       <div class="gallery-place">
-                        <a href="#"><i class="fas fa-map-marker-alt"></i> Caledonia, Scotland</a>
+                        <span><i class="fas fa-map-marker-alt"></i> Caledonia, Scotland</span>
                       </div>
                       <div class="galley-date">
                         <span><i class="fas fa-calendar-alt"></i> 25.11.2020</span>
@@ -379,17 +379,17 @@
                     </div>
                     <div class="gallery-grd-item-overlay-img">
                       <div class="gallery-grd-item-overlay-btn">
-                        <a href="#">view gallery</a>
+                        <a class="fl-btn" href="#">view gallery</a>
                       </div>
                     </div>
                   </div>
                   <div class="gallery-grd-item-des mHc">
                     <div class="gallery-grd-item-des-hdr">
-                      <h5 class="gallery-gid-title mHc1">FOREST GALLERY #6</h5>
+                      <h5 class="gallery-gid-title mHc1"><a href="#">FOREST GALLERY #6</a></h5>
                     </div>
                     <div class="gallery-place-date">
                       <div class="gallery-place">
-                        <a href="#"><i class="fas fa-map-marker-alt"></i>Sabah, Malaysia</a>
+                        <span><i class="fas fa-map-marker-alt"></i>Sabah, Malaysia</span>
                       </div>
                       <div class="galley-date">
                         <span><i class="fas fa-calendar-alt"></i>30.10.2020</span>
