--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -317,7 +317,7 @@
                <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <img src="assets/images/fp-ourprj-img1.jpg" alt="image">
+                    <a data-fancybox="gallery" data-caption="THE SMES' FOREST" href="assets/images/fp-ourprj-img1.jpg"><img src="assets/images/fp-ourprj-img1.jpg" alt="image"></a>
                     <div class="proj-btn">
                       <a class="fl-btn" href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
@@ -337,7 +337,7 @@
               <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <img src="assets/images/fp-ourprj-img2.jpg" alt="image">
+                    <a data-fancybox="gallery" data-caption="THE YAVU FOREST" href="assets/images/fp-ourprj-img2.jpg"><img src="assets/images/fp-ourprj-img2.jpg" alt="image"></a>
                     <div class="proj-btn">
                       <a class="fl-btn" href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
@@ -357,7 +357,7 @@
               <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <img src="assets/images/fp-ourprj-img4.jpg" alt="image">
+                    <a data-fancybox="gallery" data-caption="OXFORD CITY FARM" href="assets/images/fp-ourprj-img4.jpg"><img src="assets/images/fp-ourprj-img4.jpg" alt="image"></a>
                     <div class="proj-btn">
                       <a class="fl-btn"  href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
@@ -377,7 +377,7 @@
               <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <img src="assets/images/fp-ourprj-img3.jpg" alt="image">
+                    <a data-fancybox="gallery" data-caption="BUKIT PITON FOREST RESERVE" href="assets/images/fp-ourprj-img3.jpg"><img src="assets/images/fp-ourprj-img3.jpg" alt="image"></a>
                     <div class="proj-btn">
                       <a class="fl-btn" href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
