--- a/themes/wwcomps/current-competition-entry.html
+++ b/themes/wwcomps/current-competition-entry.html
@@ -217,44 +217,98 @@
   </div>
 </header>
 
-<section class="current-competition-entry-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="current-competition-entry-sec-ctlr">
-          <div class="hh-accordion-tab-row">
-          <h3 class="hh-accordion-title">
-           <div class="fl-angle-hdr">
-            <span class="fl-angle-hdr-join"></span>
-            
-                  <div class="fl-angle-sec-hdr">
-                    <h2 class="fl-h5 flash-title"><span>FOREST</span> PROJECTS</h2>
-                    <span><i class="fas fa-angle-up"></i></span>  
-                  </div>
-                </div>          
-              </h3>
-          <div class="hh-accordion-des">
-            <div>
-            <p>Great chance to win the new Xbox Series X with an awesome set-up to go with it! Great odds on this one with just 1000 tickets available and just £5.99  to enter! Here’s everything the winner will be getting their hands on:</p>
+
+<section clsss="current-competition-entry-section">
+  <div class="current-competition-entry-sec-ctlr">
+
+    <div class="hh-accordion-tab-row">
+      <div class="fl-angle-hdr-cntlr hh-accordion-title">
+        <div class="fl-angle-hdr">
+          <span class="fl-angle-hdr-join"></span>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="fl-angle-sec-hdr">
+                  <h2 class="fl-h5 flash-title"><span>COMPETITION </span>   DISCRIPTION</h2>
+                  <span><i class="fas fa-angle-up"></i></span> 
+                </div>
+              </div>
             </div>
-            <div>
-              <h5>XBOX SERIES X</h5>
-              <ul>
-                <li>The new Xbox Series X console unleashes new gaming possibilities that you never anticipated</li>
-                <li> Experience lightning-fast loading with an ultra-high-speed SSD, deeper immersion with support for haptic feedback, adaptive triggers and 3D Audio, and an all-new generation of incredible Xbox games</li>
-                <li> Lightning Speed – Harness the power of a custom CPU, GPU and SSD with Integrated I/O that rewrite the rules of what a Xbox console can do</li>
-                <li> Stunning Games – marvel at incredible graphics and experience new Xbox features</li>
-                <li> Breathtaking Immersion – discover a deeper gaming experience with support for haptic feedback, adaptive triggers, and 3D Audio technology</li>
-              </ul>
-              <h5>£100 TO SPEND IN THE MICROSOFT STORE</h5>
-            </div>
-          </div>
+          </div> 
         </div>
+      </div>
+      <div class="hh-accordion-des">
+           <div class="container">
+             <div class="row">
+               <div class="col-md-12">
+                <div class="hh-accordion-des-cntlr">
+                    <span> <img src="assets/images/cce-accor-angle.png" alt=""></span>
+                    <div>
+                      <p>Great chance to win the new Xbox Series X with an awesome set-up to go with it! Great odds on this one with just 1000 tickets available and just £5.99  to enter! Here’s everything the winner will be getting their hands on:</p>
+                    </div>
+                    <div>
+                      <h5>XBOX SERIES X</h5>
+                      <ul class="reset-list ulc">
+                        <li>The new Xbox Series X console unleashes new gaming possibilities that you never anticipated</li>
+                        <li> Experience lightning-fast loading with an ultra-high-speed SSD, deeper immersion with support for haptic feedback, adaptive triggers and 3D Audio, and an all-new generation of incredible Xbox games</li>
+                        <li> Lightning Speed – Harness the power of a custom CPU, GPU and SSD with Integrated I/O that rewrite the rules of what a Xbox console can do</li>
+                        <li> Stunning Games – marvel at incredible graphics and experience new Xbox features</li>
+                        <li> Breathtaking Immersion – discover a deeper gaming experience with support for haptic feedback, adaptive triggers, and 3D Audio technology</li>
+                      </ul>
+                      <h5>£100 TO SPEND IN THE MICROSOFT STORE</h5>
+                    </div>
+                </div>
+               </div>
+             </div>
+           </div>
+      </div>
+    </div>
+
+    <div class="hh-accordion-tab-row">
+      <div class="fl-angle-hdr-cntlr hh-accordion-title">
+        <div class="fl-angle-hdr">
+          <span class="fl-angle-hdr-join"></span>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="fl-angle-sec-hdr">
+                  <h2 class="fl-h5 flash-title"><span>COMPETITION </span>   DISCRIPTION</h2>
+                  <span><i class="fas fa-angle-up"></i></span> 
+                </div>
+              </div>
+            </div>
+          </div> 
+        </div>
+      </div>
+      <div class="hh-accordion-des">
+           <div class="container">
+             <div class="row">
+               <div class="col-md-12">
+                <div class="hh-accordion-des-cntlr">
+                    <span> <img src="assets/images/cce-accor-angle.png" alt=""></span>
+                    <div>
+                      <p>Great chance to win the new Xbox Series X with an awesome set-up to go with it! Great odds on this one with just 1000 tickets available and just £5.99  to enter! Here’s everything the winner will be getting their hands on:</p>
+                    </div>
+                    <div>
+                      <h5>XBOX SERIES X</h5>
+                      <ul class="reset-list ulc">
+                        <li>The new Xbox Series X console unleashes new gaming possibilities that you never anticipated</li>
+                        <li> Experience lightning-fast loading with an ultra-high-speed SSD, deeper immersion with support for haptic feedback, adaptive triggers and 3D Audio, and an all-new generation of incredible Xbox games</li>
+                        <li> Lightning Speed – Harness the power of a custom CPU, GPU and SSD with Integrated I/O that rewrite the rules of what a Xbox console can do</li>
+                        <li> Stunning Games – marvel at incredible graphics and experience new Xbox features</li>
+                        <li> Breathtaking Immersion – discover a deeper gaming experience with support for haptic feedback, adaptive triggers, and 3D Audio technology</li>
+                      </ul>
+                      <h5>£100 TO SPEND IN THE MICROSOFT STORE</h5>
+                    </div>
+                </div>
+               </div>
+             </div>
+           </div>
       </div>
     </div>
   </div>
-</div>
 </section>
+
 
 
 
