--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -934,7 +934,7 @@
                   <h5 class="fl-h5 ftr-heading">CONTACT INFO</h5>
                   <div class="ftr-collapse-con">
                     <div class="ftr-contact-info-row">
-                      <strong>ADDRESS:</strong>
+                      <strong class="hide-sm">ADDRESS:</strong>
                       <div>
                         <a href="#">83 Upper St, Camden, <br>
                           London, N1 0NU
