--- a/themes/wwcomps/current-competition-entry.html
+++ b/themes/wwcomps/current-competition-entry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Forest projects</title>
+  <title>Current competition entry</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -230,7 +230,7 @@
               <div class="col-md-12">
                 <div class="fl-angle-sec-hdr">
                   <h2 class="fl-h5 flash-title"><span>COMPETITION </span>   DISCRIPTION</h2>
-                  <span><i class="fas fa-angle-up"></i></span> 
+                  <span class="icon-rotate"><i class="fas fa-angle-up"></i></span> 
                 </div>
               </div>
             </div>
@@ -273,7 +273,7 @@
               <div class="col-md-12">
                 <div class="fl-angle-sec-hdr">
                   <h2 class="fl-h5 flash-title"><span>COMPETITION </span>   DISCRIPTION</h2>
-                  <span><i class="fas fa-angle-up"></i></span> 
+                  <span class="icon-rotate"><i class="fas fa-angle-up"></i></span> 
                 </div>
               </div>
             </div>
