--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -256,7 +256,7 @@
 </div>
 
 
-<section class="lucky-winner-banner page-banner-section">
+<section class="lucky-winner-banner page-banner-section d-none">
   <div class="banner-bg lucky-winner-banner-bg">
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
     <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/lucky-winner-banner-bg-right-img.jpg')"></div>
@@ -473,7 +473,7 @@
 </section>
 
 
-<section class="lates-compititions-section">
+<section class="lates-compititions-section d-none">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
     <div class="container">
@@ -719,7 +719,7 @@
 </section>
 
 
-<section class="main-content">
+<section class="main-content d-none">
   <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -736,7 +736,7 @@
 
 
 
-<section class="lates-winners-section">
+<section class="lates-winners-section d-none">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
     <div class="container">
@@ -881,7 +881,7 @@
 
 
 
-<footer class="footer-wrp">
+<footer class="footer-wrp d-none">
   <div class="footer-top">
     <div class="container">
       <div class="row">
