--- a/themes/wwcomps/winner.html
+++ b/themes/wwcomps/winner.html
@@ -211,7 +211,7 @@
       </div>
     </div> 
   </div>
-  <div class="winners-sec-bg inline-bg" style="background-image: url('assets/images/hit-bnr-page-lft-img.jpg')">
+  <div class="winners-sec-bg inline-bg" style="background-image: url('assets/images/winr-bg.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -401,6 +401,30 @@
                 </div>
               </li>
             </ul>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby=" exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title wgid-title-popup" id="exampleModalLabel">LG OLED55CX5LB (2020) 4K TV</h5>
+                  </div>
+                  <div class="modal-body">
+                    <i><img src="assets/images/popup-img.jpg" alt=""></i>
+                    <div class="body-cont">
+                      <p><span>This draw took place on Thursday 9th January,</span></p>       
+                      <p>
+                        <span>Congratulations to Nick Jeffrey with number</span>
+                        <a href="tel:6665">6665.</a>
+                      </p>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fringilla lobortis justo, ut gravida ligula. Sed auctor vehicula magna vel ultricies.</p> 
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-success pop-btn" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>    
           <div class="fl-pagi-cntlr">
             <ul class="clear-fix page-numbers">
