--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -233,7 +233,7 @@
   </div>
 </section>
 
-<section class="page-banner-section how-it-works-sec">
+<section class="page-banner-section how-it-works-sec faqs-bnr-pg-sec">
   <div class="banner-bg">
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
     <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/faqs-bnr-page-rgt-img.jpg')"></div>
