--- a/themes/wwcomps/gallery.html
+++ b/themes/wwcomps/gallery.html
@@ -459,7 +459,7 @@
                   <h5 class="fl-h5 ftr-heading">CONTACT INFO</h5>
                   <div class="ftr-collapse-con">
                     <div class="ftr-contact-info-row">
-                      <strong>ADDRESS:</strong>
+                      <strong class="hide-sm">ADDRESS:</strong>
                       <div>
                         <a href="#">83 Upper St, Camden, <br>
                           London, N1 0NU
@@ -506,6 +506,7 @@
     </div>
   </div> 
 </footer>
+
 <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-3.0.0.js"></script>
 <script src="assets/js/popper.min.js"></script>
@@ -519,6 +520,10 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+
+
+<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
