--- a/themes/wwcomps/index.html
+++ b/themes/wwcomps/index.html
@@ -111,11 +111,101 @@
 
 
 <footer class="footer-wrp">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-          <div class="ftr-col">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="ftr-cols">
+            <div class="ftr-col-1 ftr-col ">
+              <div class="ftr-intro-col">
+                <div class="ftr-logo">
+                  <a href="#">
+                    <img src="assets/images/logo-ftr.svg">
+                  </a>
+                </div>
+                <div class="ftr-intro-col-des">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies magna vitae neque porttitor eleifend. Aliquam laoreet quis urna nec molestie. Sed non odio vitae tellus interdum scelerisque id nec leo.</p>
+                </div>
+              </div>
+            </div>
+            <div class="ftr-col-2 ftr-col ">
+              <div class="ftr-col-2-con">
+                <h5 class="fl-h5 ftr-heading">SITE LINKS</h5>
+                <div class="ftr-collapse-con">
+                  <ul class="">
+                    <li><a href="#">Latest Competitions</a></li>
+                    <li><a href="#">Live draws</a></li>
+                    <li><a href="#">Entry lists</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Contact us</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="ftr-col-3 ftr-col ">
+              <div class="ftr-col-3-con">
+                  <h5 class="fl-h5 ftr-heading">WILD LINKS</h5>
+                  <div class="ftr-collapse-con">
+                    <ul class="">
+                      <li><a href="#">Register</a></li>
+                      <li><a href="#">Login</a></li>
+                      <li><a href="#">My account</a></li>
+                      <li><a href="#">About us</a></li>
+                      <li><a href="#">Restoration projects</a></li>
+                      <li><a href="#">Gallery</a></li>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+            <div class="ftr-col-4 ftr-col ">
+              <div class="ftr-col-4-con">
+                  <h5 class="fl-h5 ftr-heading">CONTACT INFO</h5>
+                  <div class="ftr-collapse-con">
+                    <div class="ftr-contact-info-row">
+                      <strong class="hide-sm">ADDRESS:</strong>
+                      <div>
+                        <a href="#">83 Upper St, Camden, <br>
+                          London, N1 0NU
+                          </a>
+                      </div>
+                    </div>
+                    <div class="ftr-contact-info-row">
+                      <strong>PHONE:</strong>
+                      <div>
+                        <a href="tel:442920257257">+44 2920-257-257</a>
+                      </div>
+                    </div>
+                    <div class="ftr-contact-info-row">
+                      <strong>EMAIL:</strong>
+                      <div>
+                        <a href="mailto:info@wildwoodcomps.co.u">info@wildwoodcomps.co.u</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-btm">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+            <div class="ftr-btm-con">
+              <div class="copyright-text">
+                <p>&copy; Copyright 2021 - All rights reserved to Wild Wood Comps </p>
+              </div>
+              <div class="copyright-menu">
+                <ul class="reset-list">
+                  <li><a href="#">Privacy Policy </a></li>
+                  <li><a href="#">Terms and Conditions</a></li>
+                </ul>
+              </div>
+            </div>
+        </div>
       </div>
     </div>
   </div> 
@@ -134,6 +224,10 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+
+
+<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
