--- a/themes/wwcomps/live-draws.html
+++ b/themes/wwcomps/live-draws.html
@@ -415,7 +415,7 @@
                   <h5 class="fl-h5 ftr-heading">CONTACT INFO</h5>
                   <div class="ftr-collapse-con">
                     <div class="ftr-contact-info-row">
-                      <strong>ADDRESS:</strong>
+                      <strong class="hide-sm">ADDRESS:</strong>
                       <div>
                         <a href="#">83 Upper St, Camden, <br>
                           London, N1 0NU
@@ -480,7 +480,6 @@
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 <script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
-
 <script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 
