--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -317,9 +317,9 @@
                <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <a data-fancybox="gallery" data-caption="THE SMES' FOREST" href="assets/images/fp-ourprj-img1.jpg"><img src="assets/images/fp-ourprj-img1.jpg" alt="image"></a>
+                    <img src="assets/images/fp-ourprj-img1.jpg" alt="image">
                     <div class="proj-btn">
-                      <a class="fl-btn" href="#">VIEW GALLERY</a>
+                      <a data-fancybox="gallery" data-caption="THE SMES' FOREST" href="assets/images/fp-ourprj-img1.jpg" class="fl-btn" href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
                     </div>
                   </div>
@@ -337,9 +337,9 @@
               <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <a data-fancybox="gallery" data-caption="THE YAVU FOREST" href="assets/images/fp-ourprj-img2.jpg"><img src="assets/images/fp-ourprj-img2.jpg" alt="image"></a>
+                    <img src="assets/images/fp-ourprj-img2.jpg" alt="image">
                     <div class="proj-btn">
-                      <a class="fl-btn" href="#">VIEW GALLERY</a>
+                      <a data-fancybox="gallery" data-caption="THE YAVU FOREST" href="assets/images/fp-ourprj-img2.jpg" class="fl-btn" href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
                     </div>
                   </div>
@@ -357,9 +357,9 @@
               <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <a data-fancybox="gallery" data-caption="OXFORD CITY FARM" href="assets/images/fp-ourprj-img4.jpg"><img src="assets/images/fp-ourprj-img4.jpg" alt="image"></a>
+                    <img src="assets/images/fp-ourprj-img4.jpg" alt="image">
                     <div class="proj-btn">
-                      <a class="fl-btn"  href="#">VIEW GALLERY</a>
+                      <a data-fancybox="gallery" data-caption="OXFORD CITY FARM" href="assets/images/fp-ourprj-img4.jpg" class="fl-btn"  href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
                     </div>
                   </div>
@@ -377,9 +377,9 @@
               <li class="our-proj-grid-item">
                 <div class="our-project-item">
                   <div class="project-img">
-                    <a data-fancybox="gallery" data-caption="BUKIT PITON FOREST RESERVE" href="assets/images/fp-ourprj-img3.jpg"><img src="assets/images/fp-ourprj-img3.jpg" alt="image"></a>
+                    <img src="assets/images/fp-ourprj-img3.jpg" alt="image">
                     <div class="proj-btn">
-                      <a class="fl-btn" href="#">VIEW GALLERY</a>
+                      <a data-fancybox="gallery" data-caption="BUKIT PITON FOREST RESERVE" href="assets/images/fp-ourprj-img3.jpg" class="fl-btn" href="#">VIEW GALLERY</a>
                       <a class="fl-btn" href="#">PLAY 2 PLANT</a>
                     </div>
                   </div>
