--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -294,7 +294,7 @@
   </div>
 </section>
 
-<section class="our-project-sec">
+<section class="our-project-sec inline-bg" style="background: url(assets/images/forest-project-bg.jpg)">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
     <div class="container">
@@ -399,6 +399,7 @@
       </div>
     </div>
   </div>
+  <div class="forest-bg-div"></div>
 </section>
 
 <section class="partners-sec">
