--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -272,7 +272,7 @@
                 <li>
                   <div class="counter-item">
                     <div class="counter-item-img"><img src="assets/images/frst-proj-img1.png" alt=""></div>
-                    <strong class="number-of-counter">£<span class="counter">166</span>k</strong>
+                    <strong class="number-of-counter">£<span>166</span>k</strong>
                     <h6 class="counter-item-sub-title">MONEY RAISED</h6>
                   </div>
                 </li>
@@ -280,7 +280,7 @@
                 <li>
                   <div class="counter-item">
                     <div class="counter-item-img"><img src="assets/images/frst-proj-img2.png" alt=""></div>
-                    <strong class="number-of-counter"><span class="counter">4421</span>+</strong>
+                    <strong class="number-of-counter"><span>4421</span>+</strong>
                     <h6 class="counter-item-sub-title">TREES PLANTED</h6>
                   </div>
                 </li>
